<resources>
    <string name="app_name">TUTU</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profil</string>
    <string name="login">Login</string>
    <string name="title_message">Pesan</string>
    <string name="message">Message</string>
    <string name="login_desc">Menyediakan tutorial pengerjaan tugas akuntansi,bersama dengan mentor terpercaya pilihanmu.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="google">Google</string>
    <string name="register_desc">Welcome, User TUTU!</string>
    <string name="masuk_disini">Masuk disini</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="pelajar">Pelajar</string>
    <string name="pengajar">Pengajar</string>
    <string name="register_desc1">Sebelum kita lanjut,\n Kamu ingin mendaftar sebagai apa?</string>
    <string name="masukkan_datamu">Masukkan Datamu</string>
    <string name="tempat_tanggal_lahir">Tempat / Tanggal Lahir</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Buat Akun</string>
    <string name="pilih_jenjang_pendidikan">Pilih Jenjang Pendidikan</string>
    <string name="siswa">Siswa</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="welcome">Hai,\n%s!</string>
    <string name="logo">Logo</string>
    <string name="hot">Yang sedang hangat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_sure_want_to_exit">Yakin untuk keluar?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="save">Simpan</string>
    <string name="ubah_pendidikan">Ubah Jenjang Pendidikan</string>
    <string name="notam">Silahkan isi terlebih dahulu!</string>
    <string name="search_message">Cari Pesan</string>
    <string name="search_home">Cari video, latihan soal, dan mentor</string>
    <string name="search_mentor">Cari atau lihat rekomendasi mentor</string>
    <string name="online_mentors">Mentor yang sedang aktif</string>
    <string name="orders">Pemesanan</string>
    <string name="chosen">Dipilih</string>
    <string name="placeholder_name">Budi</string>
    <string name="placeholder_rating">4.5</string>
    <string name="choose_consultation_method">Pilih Metode Konsultasi :</string>
    <string name="via_chat">Via Chat</string>
    <string name="via_zoom_chat">Via Zoom + Chat</string>
    <string name="choose_consultation_duration">Pilih Durasi Konsultasi :</string>
    <string name="_15min">15 menit</string>
    <string name="_30min">30 menit</string>
    <string name="_1jam">1 jam</string>
    <string name="_2jam">2 jam</string>
    <string name="next">Berikutnya</string>
    <string name="cancel">Batal</string>
    <string name="order_history">Riwayat Pesanan</string>
    <string name="siswa_sma_smk_man_sederajat">Siswa SMA/SMK/MAN/Sederajat</string>
    <string name="pilih_target_didik">Pilih Target Didik</string>
    <string name="masukkan_foto_ktp">Masukkan Foto Ktp</string>
    <string name="masukkan_portofolio">Masukkan Portofolio</string>
    <string name="masukkan_cv">Masukkan CV</string>
    <string name="masukkan_pasfoto_terbaru">Masukkan Pasfoto terbaru</string>
    <string name="masukkan_bukti_karya_n_contoh_sertifikat_dsb_opsional">Masukkan Bukti Karya\n *contoh: sertifikat, dsb (opsional)</string>
    <string name="berkas_opsional">Berkas Opsional</string>
    <string name="berkas_pendukung">Berkas Pendukung</string>
    <string name="title_activity_main_mentor">MainMentorActivity</string>
    <string name="balance">%s</string>
    <string name="title_balance">Saldo</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="pesanan_masuk">Pesanan Masuk</string>
    <string name="cash_out">Tarik Saldo</string>
    <string name="type">Ketik Pesan</string>
    <string name="placeholder_chat_details">Kita belajar lewat zoom ya, Silahkan join ke zoom</string>
    <string name="transaction_history">Riwayat Transaksi</string>
    <string name="order_details">Detail Pesanan</string>
    <string name="payment_details">Detail Pembayaran</string>
    <string name="transaction_time">Waktu Transaksi</string>
    <string name="consultation_fee">Biaya Konsultasi</string>
    <string name="application_fee">Biaya Penyedia Aplikasi</string>
    <string name="total">Total</string>
    <string name="s_transaction_time">%s</string>
    <string name="d_consultation_fee">%d</string>
    <string name="d_application_fee">%d</string>
    <string name="d_total">%d</string>
    <string name="s_order_details">Tutorial Pengerjaan Tugas %s Durasi %s</string>
    <string name="consultation">Konsultasi</string>
    <string name="success">Berhasil!</string>
    <string name="start_a_chat_with_mentor">Mulai Percakapan dengan Mentor!</string>
    <string name="no_transaction_yet">Belum Ada Transaksi</string>
    <string name="desc_mentor_reg_3">Kami akan melakukan seleksi terhadap data kamu selama 2-4 hari kedepan. Kamu dapat masuk ke akun yang sudah kamu buat untuk melihat apakah kamu diterima / tidak.</string>
    <string name="back_to_login">Kembali ke halaman login</string>
    <string name="account_usage_info">Data kamu masih kami periksa nih.. Harap bersabar ya!</string>
    <string name="approve">Approve</string>
    <string name="optional">Opsional</string>
    <string name="portfolio">Portofolio</string>
    <string name="cv">CV</string>
    <string name="ktp">KTP</string>
    <string name="pasfoto">Pasfoto</string>
    <string name="desc_adm">Nanti hasilnya disini</string>
</resources>