<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.home.consult.order.OrderFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders"
        style="@style/titlePoppinsMedium"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="200dp">
            <ImageView
                android:id="@+id/iv_mentor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"/>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:gravity="center|start">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/placeholder_name"
                style="@style/titlePoppinsMedium"
                android:layout_marginTop="-8dp"/>

            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="wrap_content">
                
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star"
                    android:layout_gravity="center|start"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_rating"
                    style="@style/titlePoppinsMedium"
                    android:textSize="13sp"
                    android:layout_gravity="center|end"/>
            </FrameLayout>
        </LinearLayout>
        
        <com.google.android.material.card.MaterialCardView
            android:layout_width="49dp"
            android:layout_height="18dp"
            android:backgroundTint="@color/light_green"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chosen"
                android:layout_gravity="center"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_consultation_method"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        style="@style/titlePoppinsMedium"
        android:textSize="14sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rad_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/via_chat"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rad_zoomchat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/via_zoom_chat"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_consultation_duration"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        style="@style/titlePoppinsMedium"
        android:textSize="14sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rad_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15min"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rad_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30min"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rad_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1jam"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rad_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2jam"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/white"
            style="@style/titlePoppinsMedium"
            android:textSize="15sp"
            app:cornerRadius="7dp"
            android:textColor="@color/dark_blue"
            app:strokeColor="@color/dark_blue"
            app:strokeWidth="1dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_weight="1"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/dark_blue"
            style="@style/titlePoppinsMedium"
            android:textSize="15sp"
            app:cornerRadius="7dp"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>