<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="15dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsBold"
            android:text="@string/pasfoto"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsMedium"
            android:text="@string/desc_adm"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsBold"
            android:text="@string/ktp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsMedium"
            android:text="@string/desc_adm"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsBold"
            android:text="@string/cv"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsMedium"
            android:text="@string/desc_adm"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsBold"
            android:text="@string/portfolio"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsMedium"
            android:text="@string/desc_adm"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsBold"
            android:text="@string/optional"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titlePoppinsMedium"
            android:text="@string/desc_adm"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_approve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/approve"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/dark_blue"
            style="@style/titlePoppinsMedium"
            android:textSize="15sp"
            app:cornerRadius="7dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</ScrollView>