<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_students.home.consult.orderhistory.details.OrderDetailsFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center|start">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            app:icon="@drawable/ic_back"
            app:iconSize="42dp"
            android:layout_marginStart="-30dp"
            android:backgroundTint="@android:color/transparent"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:outlineAmbientShadowColor="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_details"
            style="@style/titlePoppinsMedium"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="200dp">
            <ImageView
                android:id="@+id/iv_mentor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"/>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:gravity="center|start">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/placeholder_name"
                style="@style/titlePoppinsMedium"
                android:layout_marginTop="-8dp"/>

            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star"
                    android:layout_gravity="center|start"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_rating"
                    style="@style/titlePoppinsMedium"
                    android:textSize="13sp"
                    android:layout_gravity="center|end"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_details"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_time"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultation_fee"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application_fee"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/tv3"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/tv4"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv_transaction_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_transaction_time"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv2"
            app:layout_constraintBottom_toBottomOf="@id/tv2"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv_consultation_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_consultation_fee"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv3"
            app:layout_constraintBottom_toBottomOf="@id/tv3"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv_app_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_application_fee"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv4"
            app:layout_constraintBottom_toBottomOf="@id/tv4"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_total"
            style="@style/titlePoppinsMedium"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv5"
            app:layout_constraintBottom_toBottomOf="@id/tv5"
            android:textColor="@color/gray"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        app:cardElevation="8dp"
        app:cardCornerRadius="23dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Berikan Rating ke Mentor?"
                style="@style/titlePoppinsMedium"
                android:textSize="15sp"/>

            <RatingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressBackgroundTint="@color/gray"
                android:progressTint="@color/black"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>